--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/pages/about.html">About</a></li>
+                <li><a href="pages/about.html">About</a></li>
                 <li><a href="index.html">Home</a></li>                
-                <li><a href="/pages/works.html">Works</a></li>
+                <li><a href="pages/works.html">Works</a></li>
                 <li><a href="pages/blogs.html">Blog</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
             </ul>
