--- a/pages/works.html
+++ b/pages/works.html
@@ -23,11 +23,11 @@
     <section class="featured-works">
         <h1>works</h1>
         <div  class="works">
-            <a href="">
+            <a href="works/work1.html">
                 <div class="work">
                     <div class="work-img"><img src="../Assets/Gym.png" alt="Designing Dashboards"></div>
                     <div class="work-text">
-                        <h3><a href="">Gym Managment System</a></h3>
+                        <h3><a href="works/work1.html">Gym Managment System</a></h3>
                         <span><span class="year">2024</span> Dashboard</span>
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
     
