--- a/pages/works/work1.html
+++ b/pages/works/work1.html
@@ -25,22 +25,22 @@
             <p class="tags"><span class="year">2024</span> Dashboard, User Experience Design</p>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             <div class="image-container">
-                <img src="../../Assets/Gym.png" alt="Dashboard Example">
+                <img src="../../Assets/Gym2.png" alt="Dashboard Example">
             </div>
         </section>
 
         <section class="text-section">
-            <h2>Heading 1</h2>
-            <h3>Heading 2</h3>
+            <h1>Login Page</h1>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             <div class="image-container">
-                <img src="Assets/car-example.png" alt="Car Illustration">
+                <img src="../../Assets/Gym1.png" alt="Car Illustration">
             </div>
+            <h1>Management</h1>
         </section>
 
         <section class="order-summary">
             <div class="image-container">
-                <img src="Assets/order-summary.png" alt="Order Summary">
+                <img src="../../Assets/Gym3.png" alt="Order Summary">
             </div>
             <p>Total <span class="price">$35.28</span></p>
         </section>
