--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="Stylesheet/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
+<body class="fadeInUp-animation">
     <header>
         <nav>
             <ul>
-                <li><a href="pages/about.html">About</a></li>
                 <li><a href="index.html">Home</a></li>                
+                <li><a href="pages/about.html">About</a></li>
                 <li><a href="pages/works.html">Works</a></li>
                 <li><a href="pages/blogs.html">Blog</a></li>
                 <li><a href="pages/contact.html">Contact</a></li>
@@ -25,7 +25,7 @@
             <h1>Hi, I am Mohamed, <br> Creative Technologist</h1>
             <p>full-stack developer known for crafting seamless web applications,android apps and softwares
                 with a focus on clean code and user-centric design.</p>
-            <a href="Assets/cv.pdf" class="btn">Download Resume</a>
+            <a href="Assets/cv.pdf" class="btn"><i class="fa-regular fa-file"></i> Download Resume</a>
         </div>
         <div class="hero-image">
             <img src="Assets/pfp.jpg" alt="John's Profile Picture">
@@ -51,11 +51,11 @@
     <section class="featured-works">
         <h2>Featured works</h2>
         <div  class="works">
-            <a href="">
+            <a href="pages/works/work1.html">
                 <div class="work">
                     <div class="work-img"><img src="Assets/Gym.png" alt="Designing Dashboards"></div>
                     <div class="work-text">
-                        <h3><a href="">Gym Managment System</a></h3>
+                        <h3><a href="pages/works/work1.html">Gym Managment System</a></h3>
                         <span><span class="year">2024</span> Dashboard</span>
                         <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
     
@@ -86,7 +86,7 @@
     <footer>
         <div class="social-links">
             <a href=""><i class="fa-brands fa-facebook fa-2xl" style="color: #21243D;"></i></a>
-            <a href=""><i class="fa-brands fa-instagram fa-2xl" style="color: #21243D;"></i></a>
+            <a href="https://www.instagram.com/moh.jsx/"><i class="fa-brands fa-instagram fa-2xl" style="color: #21243D;"></i></a>
             <a href=""><i class="fa-brands fa-twitter fa-2xl" style="color: #21243D;"></i></a>
             <a href=""><i class="fa-brands fa-linkedin fa-2xl" style="color: #21243D;"></i></a>
         </div>
