--- a/pages/works/work1.html
+++ b/pages/works/work1.html
@@ -6,7 +6,7 @@
     <title>Work Detail</title>
     <link rel="stylesheet" href="../../Stylesheet/works.css">
 </head>
-<body>
+<body class="fadeInUp-animation">
     <header>
         <nav>
             <ul>
@@ -22,8 +22,8 @@
     <main>
         <section class="work-detail">
             <h1>Gym Managment System</h1>
-            <p class="tags"><span class="year">2024</span> Dashboard, User Experience Design</p>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p class="tags"><span class="year">2024</span> <span class="tag">Software</span> Dashboard, User Experience Design</p>
+            <p>This Gym CRM application is designed to help gym administrators manage various aspects of their business. </p>
             <div class="image-container">
                 <img src="../../Assets/Gym2.png" alt="Dashboard Example">
             </div>
@@ -35,7 +35,14 @@
             <div class="image-container">
                 <img src="../../Assets/Gym1.png" alt="Car Illustration">
             </div>
-            <h1>Management</h1>
+        <div>
+        <h1>Dashboard:</h1>
+        <p> Provides an overview of key metrics, including external sessions, subscriptions, consumption, debts, and expenses.</p>
+        </div>
+        <div>
+        <h1>Client Management:</h1>
+        <p> Allows admins to maintain a list of clients and track their activities and memberships.</p>
+        </div>
         </section>
 
         <section class="order-summary">
