--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,6 +71,29 @@
             </form>
         </div>
     </div>
+    <div class="phone-contact">
+        <div class="contact-info">
+            <div class="contact-icon"><i class="fa-solid fa-phone" style="color: #E93B81;"></i></div>
+            <div class="phone-contact-text">
+                <p>Phone</p>
+                <p>+213 671 22 22 27</p>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-icon"><i class="fa-solid fa-envelope-open " style="color: #6AB5B9;"  ></i></div>
+            <div class="phone-contact-text">
+                <p>Phone</p>
+                <p>+213 671 22 22 27</p>
+            </div>
+        </div>
+        <div class="contact-info">
+            <div class="contact-icon"><i class="fa-solid fa-location-dot" style="color: #FD7590;"></i></div>
+            <div class="phone-contact-text">
+                <p>Phone</p>
+                <p>+213 671 22 22 27</p>
+            </div>
+        </div>
+    </div>
     <footer>
         <div class="social-links">
             <a href=""><i class="fa-brands fa-facebook fa-2xl" style="color: #21243D;"></i></a>
