--- a/pages/about.html
+++ b/pages/about.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Stylesheet/about.css">
     <title>Document</title>
 </head>
 <body class="fadeInUp-animation">
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>                
+                <li><a href="about.html">About</a></li>
+                <li><a href="works.html">Works</a></li>
+                <li><a href="blogs.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
