--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,6 +71,7 @@
             </form>
         </div>
     </div>
+    <h1 class="phone-title">Contact Me</h1>
     <div class="phone-contact">
         <div class="contact-info">
             <div class="contact-icon"><i class="fa-solid fa-phone" style="color: #E93B81;"></i></div>
@@ -82,24 +83,30 @@
         <div class="contact-info">
             <div class="contact-icon"><i class="fa-solid fa-envelope-open " style="color: #6AB5B9;"  ></i></div>
             <div class="phone-contact-text">
-                <p>Phone</p>
-                <p>+213 671 22 22 27</p>
+                <p>E-mail</p>
+                <p>allali@gmail.com</p>
             </div>
         </div>
         <div class="contact-info">
             <div class="contact-icon"><i class="fa-solid fa-location-dot" style="color: #FD7590;"></i></div>
             <div class="phone-contact-text">
-                <p>Phone</p>
-                <p>+213 671 22 22 27</p>
+                <p>Location</p>
+                <p>Biskra,algeria</p>
             </div>
         </div>
     </div>
+    <!-- HTML !-->
+<button class="button-36" role="button">Download Cv</button>
+
+
     <footer>
         <div class="social-links">
-            <a href=""><i class="fa-brands fa-facebook fa-2xl" style="color: #21243D;"></i></a>
-            <a target="_blank" href="https://www.instagram.com/moh.jsx/"><i class="fa-brands fa-instagram fa-2xl" style="color: #21243D;"></i></a>
-            <a href=""><i class="fa-brands fa-twitter fa-2xl" style="color: #21243D;"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin fa-2xl" style="color: #21243D;"></i></a>
+            <div class="social-icon"><a href=""><i class="fa-brands fa-facebook fa-2xl" style="color: #21243D;"></i></a></div>
+            <div class="social-icon"><a target="_blank" href="https://www.instagram.com/moh.jsx/"><i class="fa-brands fa-instagram fa-2xl" style="color: #21243D;"></i></a></div>
+            <div class="social-icon"><a href=""><i class="fa-brands fa-twitter fa-2xl" style="color: #21243D;"></i></a></div>
+            <div class="social-icon"><a href=""><i class="fa-brands fa-linkedin fa-2xl" style="color: #21243D;"></i></a></div>
+            
+            
         </div>
         <p>Copyright ©2024 All rights reserved</p>
     </footer>
