--- a/pages/works.html
+++ b/pages/works.html
@@ -34,20 +34,48 @@
                     </div>
                 </div>
             </a>
+            
             <div class="work">
-                <div class="work-img"><img src="../Assets/ecommerce.PNG" alt="Designing Dashboards"></div>
+                <div class="work-img"><a href="works/work2.html"><img src="../Assets/ecommerce.PNG" alt="Designing Dashboards"></a></div>
                 <div class="work-text">
-                    <h3><a href="">Online Store with Admin Management</a></h3>
+                    <h3><a href="works/work2.html">Online Store with Admin Management</a></h3>
                     <span><span class="year">2023</span> E-commerce</span>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
 
                 </div>
             </div>
             <div class="work">
-                <div class="work-img"><img src="../Assets/todo.png" alt="Designing Dashboards"></div>
+                <div class="work-img"><a href="works/work3.html"><img src="../Assets/todo.png" alt="Designing Dashboards"></a></div>
                 <div class="work-text">
-                    <h3><a href="">Todo List</a></h3>
+                    <h3><a href="works/work3.html">Todo List</a></h3>
                     <span><span class="year">2023</span> Management</span>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+                </div>
+            </div>
+            <div class="work">
+                <div class="work-img"><a href="works/work4.html"><img src="../Assets/mint.png" alt="Designing Dashboards"></a></div>
+                <div class="work-text">
+                    <h3><a href="works/work4.html">Mint Agency</a></h3>
+                    <span><span class="year">2022</span> Agency</span>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+                </div>
+            </div>
+            <div class="work">
+                <div class="work-img"><a href="works/work5.html"><img src="../Assets/bcs.jpg" alt="Designing Dashboards"></a></div>
+                <div class="work-text">
+                    <h3><a href="works/work5.html">BB/BCS</a></h3>
+                    <span><span class="year">2022</span> Info</span>
+                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+
+                </div>
+            </div>
+            <div class="work">
+                <div class="work-img"><a href="works/work6.html"><img src="../Assets/bike.png" alt="Designing Dashboards"></a></div>
+                <div class="work-text">
+                    <h3><a href="works/work6.html">BB/BCS</a></h3>
+                    <span><span class="year">2023</span> Info</span>
                     <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
 
                 </div>
